added support for graph

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,6 +10,7 @@
     <div class="navbar">
         <a href="/">Dashboard</a>
         <a href="/live_data">Live Data</a>
+        <a href="/data_visualization">Ploat Data</a>
     </div>
     <div class="content">
         <h1>Modbus Dashboard</h1>
